[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menus/OldWizard.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menus/MainTitle.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 156
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 44
font_data = ExtResource( 1 )

[node name="MainTitle" type="Node"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_top = 50.0
margin_right = 1024.0
margin_bottom = 550.0
color = Color( 0.258824, 0.192157, 0.192157, 1 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ColorRect/CenterContainer"]
margin_left = 258.0
margin_top = 100.0
margin_right = 765.0
margin_bottom = 400.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ColorRect/CenterContainer/MarginContainer"]
margin_right = 507.0
margin_bottom = 300.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/ColorRect/CenterContainer/MarginContainer/VBoxContainer"]
margin_right = 507.0
margin_bottom = 156.0

[node name="Title" type="Label" parent="MarginContainer/ColorRect/CenterContainer/MarginContainer/VBoxContainer/CenterContainer"]
margin_right = 507.0
margin_bottom = 156.0
custom_colors/font_color = Color( 0.321569, 0.792157, 0.294118, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Bow Me"
align = 1

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/ColorRect/CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 507.0
margin_bottom = 204.0

[node name="Label" type="Label" parent="MarginContainer/ColorRect/CenterContainer/MarginContainer/VBoxContainer/CenterContainer2"]
margin_left = 98.0
margin_right = 408.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = "Play singleplayer"

[node name="CenterContainer3" type="CenterContainer" parent="MarginContainer/ColorRect/CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 208.0
margin_right = 507.0
margin_bottom = 252.0

[node name="Label" type="Label" parent="MarginContainer/ColorRect/CenterContainer/MarginContainer/VBoxContainer/CenterContainer3"]
margin_left = 181.0
margin_right = 326.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = "Settings"

[node name="CenterContainer4" type="CenterContainer" parent="MarginContainer/ColorRect/CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 256.0
margin_right = 507.0
margin_bottom = 300.0

[node name="Label" type="Label" parent="MarginContainer/ColorRect/CenterContainer/MarginContainer/VBoxContainer/CenterContainer4"]
margin_left = 215.0
margin_right = 292.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = "Quit"

[connection signal="gui_input" from="MarginContainer/ColorRect/CenterContainer/MarginContainer/VBoxContainer/CenterContainer2" to="." method="_on_CenterContainer2_gui_input"]
[connection signal="gui_input" from="MarginContainer/ColorRect/CenterContainer/MarginContainer/VBoxContainer/CenterContainer3" to="." method="_on_CenterContainer3_gui_input"]
[connection signal="gui_input" from="MarginContainer/ColorRect/CenterContainer/MarginContainer/VBoxContainer/CenterContainer4" to="." method="_on_CenterContainer4_gui_input"]
